Stop footer appearing in wrong position when content doesn't exceed viewport

--- a/stylesheets/_layout.tabs.scss
+++ b/stylesheets/_layout.tabs.scss
@@ -1,6 +1,5 @@
 .content-main {
     display: table;
-    min-height: 100%;
     padding: 0 $gutter-width;
     position: relative;
     table-layout: fixed; // needed to make datatable overflow work at small widths
